--- a/views/forget-pass.hbs
+++ b/views/forget-pass.hbs
@@ -1,14 +1,16 @@
 <div class="container" style="padding:0; width:95%">
     <div class="content-section no-padding forget-pass-area  first-section">
-        <div class="row" style="padding: 50px 50px 100px 50px">
-            <div class="col-lg">
-                <div class="forget-pass-input">
-                    <div class="forget-pass padding-top-15-per">
-                        <span class="font-size-xxx-large font-normal-bold text-color-3498DB">Quên mật khẩu</span>
+        <div class="row" style="padding: 100px 50px 100px 50px">
+            <div class="col-lg row align-content-center justify-content-center" style="margin-left: 2px;">
+                <div class=" row justify-content-center align-items-center" style="width: 80%;">
+                    <div class="forget-pass">
+                        <div class="row justify-content-center" >
+                            <span class="title-section text-center" style="padding-bottom: 0;"> Quên mật khẩu </span>
+                        </div>
                         <div class="username">
                             <input type="text" class="user-input" placeholder="Tên đăng nhập hoặc email">
                         </div>
-                        <div class="forget-pass-but">
+                        <div class="forget-pass-but row justify-content-center">
                             <a href="/">
                                 <button class="forget-pass-button font-normal-bold">
                                     <div style="width: 9ch;">Gửi</div>
@@ -21,12 +23,12 @@
                 </div>
             </div>
             <div class="col-lg">
-                <div class="login-area row justify-content-center">
-                    <div class="rectangle-ECF0F1 margin-top-5em text-algin-center">
+                <div class="login-area row justify-content-center align-content-center" style="padding-top:1em">
+                    <div class="rectangle-ECF0F1 text-algin-center">
                         <div style="padding: 50px;">
                             <div>
                                 {{!-- <div>Chỉ áp dụng cho tài khoản cntt </div> --}}
-                                <span class="text-color-3498DB font-normal-bold font-size-xx-large margin-top-3-per">Nhớ
+                                <span class="text-color-3498DB" style="font-size: 30px; font-weight:bold">Nhớ
                                     ra mật khẩu?</span>
                             </div>
                             <div class="login">
