--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,11 +1,13 @@
 <div class="container" style="padding:0; width:95%">
     <div class="content-section no-padding login-area  first-section">
-        <div class="row" style="padding: 50px 50px 100px 50px">
-            <div class="col-lg">
-                <div class="login-input">
-                    <div class="login padding-top-15-per">
-                        <span class="font-size-xxx-large font-normal-bold text-color-3498DB">Đăng Nhập</span>
-                        <div class="username">
+        <div class="row" style="padding: 100px 50px 100px 50px">
+            <div class="col-lg row align-content-center justify-content-center" style="margin-left: 2px;">
+                <div class="row justify-content-center align-items-center" style="width: 80%;">
+                    <div class="login">
+                        <div class="row justify-content-center" >
+                            <span class="title-section text-center" style="padding-bottom: 0;"> Đăng Nhập </span>
+                        </div>
+                        <div class="username" >
                             <input id="username_form" type="text" class="user-input" placeholder="Tên đăng nhập">
                         </div>
                         <div class="password">
@@ -15,45 +17,33 @@
                             <a href="/">
                                 <button class="login-button font-normal-bold" onclick="trigger_post_login()">Đăng nhập</button>
                             </a>
-
                             <a href="/forget-pass" class="forget-pass font-normal-bold grey">quên mật khẩu</a>
                         </div>
                     </div>
-
-
                 </div>
             </div>
             <div class="col-lg">
-                <div class="sign-up-area row justify-content-center">
-                    <div class="rectangle-ECF0F1 margin-top-5em text-algin-center">
+                <div class="sign-up-area row justify-content-center align-content-center" style="padding-top:1em">
+                    <div class="rectangle-ECF0F1 text-algin-center">
                         <div style="padding: 50px">
                             <div>
                                 <span
-                                    class="text-color-3498DB font-normal-bold font-size-xx-large margin-top-3-per">Chưa
+                                    class="text-color-3498DB" style="font-size: 30px; font-weight:bold">Chưa
                                     có tài
                                     khoản</span>
                             </div>
-
                             <div class="sign-up">
                                 <a href="/sign-up">
                                     <button class="sign-up-button font-normal-bold">Đăng Ký</button>
                                 </a>
-
                             </div>
                         </div>
-
-
                     </div>
                 </div>
             </div>
-
-
         </div>
-
     </div>
 </div>
-
-
 <link rel="stylesheet" href="/stylesheets/login.css">
 <script src="/function/change-nav.js" current_page="Đăng nhập"></script>
 <script src="/function/login.js"></script>
