--- a/views/sign-up.hbs
+++ b/views/sign-up.hbs
@@ -1,17 +1,20 @@
 <div class="container" style="padding:0; width:95%">
     <div class="content-section no-padding sign-up-area  first-section">
-        <div class="row" style="padding: 50px 50px 100px 50px">
-            <div class="col-lg">
-                <div class="sign-up-input">
-                    <div class="sign-up padding-top-15-per">
-                        <span class="font-size-xxx-large font-normal-bold text-color-3498DB"> Đăng Ký </span>
+        <div class="row" style="padding: 100px 50px 100px 50px">
+            <div class="col-lg row align-content-center justify-content-center" style="margin-left: 2px;">
+                <div class="sign-up-input row justify-content-center align-items-center" style="width: 80%;">
+                    <div class="sign-up ">
+                        <div class="row justify-content-center" >
+                            <span class="title-section text-center" style="padding-bottom: 0;"> Đăng Ký </span>
+                        </div>
+
                         <div class="username">
                             <input type="text" class="user-input" placeholder="Email sinh viên">
                         </div>
                         <div class="password">
                             <input type="text" class="user-input" placeholder="Mật khẩu">
                         </div>
-                        <div class="sign-up-but">
+                        <div class="sign-up-but row justify-content-center">
                             <a href="/">
                                 <button class="sign-up-button font-normal-bold">Đăng Ký</button>
                             </a>
@@ -23,12 +26,12 @@
                 </div>
             </div>
             <div class="col-lg">
-                <div class="login-area row justify-content-center">
-                    <div class="rectangle-ECF0F1 margin-top-5em text-algin-center">
+                <div class="login-area row justify-content-center align-content-center" style="padding-top:1em">
+                    <div class="rectangle-ECF0F1 text-algin-center">
                         <div style="padding: 50px;">
                             <div>
                                 {{!-- <div>Chỉ áp dụng cho tài khoản cntt </div> --}}
-                                <span class="text-color-3498DB font-normal-bold font-size-xx-large margin-top-3-per">Đã
+                                <span class="text-color-3498DB" style="font-size: 30px; font-weight:bold">Đã
                                     có tài khoản</span>
                             </div>
                             <div class="login">
