--- a/views/login.hbs
+++ b/views/login.hbs
@@ -4,21 +4,22 @@
             <div class="col-lg row align-content-center justify-content-center" style="margin-left: 2px;">
                 <div class="row justify-content-center align-items-center" style="width: 80%;">
                     <div class="login">
-                        <div class="row justify-content-center" >
+                        <div class="row justify-content-center">
                             <span class="title-section text-center" style="padding-bottom: 0;"> Đăng Nhập </span>
                         </div>
-                        <div class="username" >
-                            <input id="username_form" type="text" class="user-input" placeholder="Tên đăng nhập">
-                        </div>
-                        <div class="password">
-                            <input id="password_form" type="text" class="user-input" placeholder="Mật khẩu">
-                        </div>
-                        <div class="login-forget-pass">
-                            <a href="/">
-                                <button class="login-button font-normal-bold" onclick="trigger_post_login()">Đăng nhập</button>
-                            </a>
-                            <a href="/forget-pass" class="forget-pass font-normal-bold grey">quên mật khẩu</a>
-                        </div>
+                        <form id="formLogin" action="" method="POST">
+                            <div class="username">
+                                <input id="username_form" name="username" type="text" class="user-input" placeholder="Tên đăng nhập">
+                            </div>
+                            <div class="password">
+                                <input id="password_form" name="password" type="text" class="user-input" placeholder="Mật khẩu">
+                            </div>
+                            <div class="login-forget-pass">
+                                <button type="submit" class="login-button font-normal-bold">Đăng nhập</button>
+                                <a href="/forget-pass" class="forget-pass font-normal-bold grey">quên mật khẩu</a>
+                            </div>
+                        </form>
+
                     </div>
                 </div>
             </div>
@@ -27,8 +28,7 @@
                     <div class="rectangle-ECF0F1 text-algin-center">
                         <div style="padding: 50px">
                             <div>
-                                <span
-                                    class="text-color-3498DB" style="font-size: 30px; font-weight:bold">Chưa
+                                <span class="text-color-3498DB" style="font-size: 30px; font-weight:bold">Chưa
                                     có tài
                                     khoản</span>
                             </div>
@@ -45,5 +45,7 @@
     </div>
 </div>
 <link rel="stylesheet" href="/stylesheets/login.css">
+<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+
 <script src="/function/change-nav.js" current_page="Đăng nhập"></script>
 <script src="/function/login.js"></script>
