--- a/views/partials/giaovien-dropdown.hbs
+++ b/views/partials/giaovien-dropdown.hbs
@@ -1,6 +1,6 @@
 <button type="button" class="text-left btn btn-action dropdown-toggle hover-text-white" style="padding-left: 0"
     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="drop-down-button">
-    Giáo viên
+    {{user.username}}
 </button>
 <div class="dropdown-menu dropdown-menu-right">
     <a class="dropdown-item" href="/profile">Thông tin cá nhân</a>
@@ -11,5 +11,5 @@
     <a class="dropdown-item" href="/rent-book-list">Sách đang mượn</a>
     <a class="dropdown-item" href="/carts">Giỏ sách</a>
     <div class="dropdown-divider"></div>
-    <a class="dropdown-item" href="/login" onclick="trigger_logout()">Đăng xuất</a>
+    <a class="dropdown-item" href="api/account/sign-out">Đăng xuất</a>
 </div>
