--- a/views/partials/sinhvien-dropdown.hbs
+++ b/views/partials/sinhvien-dropdown.hbs
@@ -1,6 +1,6 @@
 <button type="button" class="text-left btn btn-action dropdown-toggle hover-text-white" data-toggle="dropdown"
     aria-haspopup="true" aria-expanded="false" id="drop-down-button">
-    Sinh viên
+    {{user.username}}
 </button>
 <div class="dropdown-menu dropdown-menu-right">
     <a class="dropdown-item" href="/profile">Thông tin cá nhân</a>
@@ -9,5 +9,5 @@
     <a class="dropdown-item" href="/rent-book-list">Sách đang mượn</a>
     <a class="dropdown-item" href="/carts">Giỏ sách</a>
     <div class="dropdown-divider"></div>
-    <a class="dropdown-item" href="/login" onclick="trigger_logout()">Đăng xuất</a>
+    <a class="dropdown-item" href="api/account/sign-out">Đăng xuất</a>
 </div>
