Hoàn thành parse book cơ bản, chưa chỉnh nav

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,11 +11,9 @@
         </div>
     </div>
     <div class="content-section bg-white no-padding">
-        <div class="title-section text-center">{{sectionSachHot.title}}</div>
+        <div class="title-section text-center">{{sectionSachHot.title}}</div> 
         <ul class="nav nav-pills nav-fill align-items-center slick-nav-book-here" style="padding:5px;">
             {{#each sectionSachHot.list_categories}}
-            {{#if @first}}
-            {{#each this}}
             {{#if @first}}
             <li class="nav-item col-sm-2  " style="padding: 0; margin:0">
                 <a class="nav-link active-modified-list-cs" href="#">
@@ -28,30 +26,19 @@
                     {{this}}
                 </a>
             </li>
-            {{/if}}
-            {{/each}}
-            {{else}}
-            {{#each this}}
-            <li class="nav-item col-sm-2 " style="padding: 0; margin:0">
-                <a class="nav-link text-dark" href="#">
-                    {{this}}
-                </a>
-            </li>
-            {{/each}}
-            {{/if}}
+            {{/if}}            
             {{/each}}
 
         </ul>
         {{!Carousel book list}}
         <div class="slick-book-here">
             {{#each sectionSachHot.books}}
-            {{#each this}}
             <a href="/book-detail" style="color: inherit;">
                 <div class="card" style=" border:none;">
-                    <img class="card-img-top" src={{this.thumbnail}} alt="Card image cap">
+                    <img class="card-img-top" src={{this.image_url}} alt="Card image cap">
                     <div class="card-body" style="padding:10px">
                         <p class="card-text" style="margin: 0;">
-                            {{this.name}}
+                            {{this.book_name}}
                         </p>
                         <p class="card-text">
                             {{this.author}}
@@ -59,7 +46,6 @@
                     </div>
                 </div>
             </a>
-            {{/each}}
             {{/each}}
         </div>
     </div>
@@ -83,7 +69,7 @@
                                     {{this.date}}
                                 </p>
                             </div>
-                            <img class="card-img-top" src={{this.thumbnail}} alt="Card image cap"
+                            <img class="card-img-top" src={{this.image_url}} alt="Card image cap"
                                 style="padding-bottom: 20px;">
                         </a>
                     </div>
