--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -32,9 +32,9 @@
             <li class="nav-item nav-item-padding">
               <a class="nav-link text-dark" href="/">Trang chủ</a>
             </li>
-            <li class="nav-item nav-item-padding">
+            {{!-- <li class="nav-item nav-item-padding">
               <a class="nav-link text-dark" href="/categories">Thể loại</a>
-            </li>
+            </li> --}}
             <li class="nav-item nav-item-padding">
               <a class="nav-link text-dark" href="/storage">Kho sách</a>
             </li>
@@ -92,16 +92,15 @@
   </footer>
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
     integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
     crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
     integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
     crossorigin="anonymous"></script>
-
+  
   <script type="text/javascript" src="/slick/slick.min.js"></script>
   <script src="/function/layout.js"></script>
   <script src="/function/slick-here.js"></script>
