--- a/views/login.hbs
+++ b/views/login.hbs
@@ -9,10 +9,12 @@
                         </div>
                         <form id="formLogin" action="" method="POST">
                             <div class="username">
-                                <input id="username_form" name="username" type="text" class="user-input" placeholder="Tên đăng nhập">
+                                <input id="username_form" name="username" type="text" class="user-input"
+                                    placeholder="Tên đăng nhập">
                             </div>
                             <div class="password">
-                                <input id="password_form" name="password" type="text" class="user-input" placeholder="Mật khẩu">
+                                <input id="password_form" name="password" type="text" class="user-input"
+                                    placeholder="Mật khẩu">
                             </div>
                             <div class="login-forget-pass">
                                 <button type="submit" class="login-button font-normal-bold">Đăng nhập</button>
@@ -45,7 +47,7 @@
     </div>
 </div>
 <link rel="stylesheet" href="/stylesheets/login.css">
-<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="//code.jquery.com/jquery-3.5.1.min.js"></script>
 
 <script src="/function/change-nav.js" current_page="Đăng nhập"></script>
 <script src="/function/login.js"></script>
