--- a/views/partials/sinhvien-dropdown.hbs
+++ b/views/partials/sinhvien-dropdown.hbs
@@ -9,5 +9,5 @@
     <a class="dropdown-item" href="/rent-book-list">Sách đang mượn</a>
     <a class="dropdown-item" href="/carts">Giỏ sách</a>
     <div class="dropdown-divider"></div>
-    <a class="dropdown-item" href="api/account/sign-out">Đăng xuất</a>
+    <a class="dropdown-item" href="/api/account/sign-out">Đăng xuất</a>
 </div>
